--- a/Christmas.html
+++ b/Christmas.html
@@ -2139,7 +2139,7 @@ new la({color:void 0!==b?b:16777215}))};k.WrapAroundEnding=2402;k.XHRLoader=func
 
     <div id="overlay">
       <ul>
-        <li class="title">To WSY：</li>
+        <li class="title">To 王诗懿：</li>
         <li>
           <button class="btn" id="btnA" type="button">
             <!-- Merry Christmas  -->
@@ -2160,8 +2160,44 @@ new la({color:void 0!==b?b:16777215}))};k.WrapAroundEnding=2402;k.XHRLoader=func
       const my_labels = [
         "祝你圣诞快乐！",
         "Merry Christmas！",
-        "期末周加油！赛博圣诞！",
-        "守得云开见月明哈哈哈",
+        "期末周加油！",
+        "就是想给你过一个赛博圣诞！",
+        "希望你喜欢~",
+        "虽然有点中二",
+        "但我还是想说",
+        "守得云开见月明",
+        "背景音乐是第一次听到你唱的歌！",
+        "当然 BGM 是可以自定义的",
+        "如果你想换的话也可以！",
+        "接下来是音轨并不匹配的歌词",
+        "爱情就像 蓝蓝天上",
+        "一片留白有你陪我想象",
+        "白马突然 不再抽象",
+        "青蛙终于遇见灰姑娘",
+        "就算路还漫长 我却有一种预感",
+        "我相信这灵感",
+        "我把你画成花 未开的一朵花",
+        "再把思念一点一滴画成雨落下",
+        "每当我不在 请记得我的爱",
+        "就在同一天空之下遥远地灌溉",
+        "等待秋去春来 等待下一次花开",
+        "在咫尺的未来",
+        "生活就像 茫茫海上",
+        "一只小船勇敢乘风破浪",
+        "而你就像 不远前方",
+        "默默张开双手的港湾",
+        "就算路还漫长 我却有一种预感",
+        "我相信这灵感",
+        "我把你画成花 未开的一朵花",
+        "再把思念一点一滴画成雨落下",
+        "每当我不在 请记得我的爱",
+        "就在同一天空之下遥远地灌溉",
+        "等待秋去春来 等待下一次花开",
+        "就在咫尺的未来",
+        "爱情就像 遥遥路上",
+        "一束明亮却温柔的月光",
+        "快乐原来 如此简单",
+        "你在身旁就是我的天堂",
       ];
       const { PI, sin, cos } = Math;
       const TAU = 2 * PI;
@@ -2308,6 +2344,7 @@ new la({color:void 0!==b?b:16777215}))};k.WrapAroundEnding=2402;k.XHRLoader=func
           '<div class="text-loading">Merry Christmas ...</div>';
         
         const files = [
+          "https://xiaosayin.github.io/Merry_Christmas_wsy.github.io/hua.mp3",
           "https://xiaosayin.github.io/Merry_Christmas_wsy.github.io/zhui.mp3",
           // "http://music.163.com/song/media/outer/url?id=448704788.mp3", // ! 音乐资源获取
           // 修改下面这个链接
