--- a/happy_for_wsy.html
+++ b/happy_for_wsy.html
@@ -34,7 +34,7 @@
 			<video id="video1" muted="muted" autoplay="autoplay" loop="loop" src="./video/chrismas.mp4">
 			</video>
 			<audio id="music1" autostart="true" loop="loop" preload="auto" controls hidden="true">
-				<source src="./music/Right_time.flac"></source>
+				<source src="./music/mengzhongren.mp3"></source>
 			</audio>
 
 		</div>
