--- a/Christmas.html
+++ b/Christmas.html
@@ -2169,6 +2169,8 @@ new la({color:void 0!==b?b:16777215}))};k.WrapAroundEnding=2402;k.XHRLoader=func
         "背景音乐是第一次听到你唱的歌！",
         "当然 BGM 是可以自定义的",
         "如果你想换的话也可以！",
+        "如果想退回重新打开一次礼物",
+        "刷新当前页面就可以了！",
         "接下来是音轨并不匹配的歌词",
         "爱情就像 蓝蓝天上",
         "一片留白有你陪我想象",
