--- a/Christmas.html
+++ b/Christmas.html
@@ -2171,6 +2171,8 @@ new la({color:void 0!==b?b:16777215}))};k.WrapAroundEnding=2402;k.XHRLoader=func
         "如果你想换的话也可以！",
         "如果想退回重新打开一次礼物",
         "刷新当前页面就可以了！",
+        "因为BGM有点长",
+        "所以就放一下 BGM 的歌词吧",
         "接下来是音轨并不匹配的歌词",
         "爱情就像 蓝蓝天上",
         "一片留白有你陪我想象",
@@ -2200,6 +2202,7 @@ new la({color:void 0!==b?b:16777215}))};k.WrapAroundEnding=2402;k.XHRLoader=func
         "一束明亮却温柔的月光",
         "快乐原来 如此简单",
         "你在身旁就是我的天堂",
+        "圣诞快乐！ Again! \n 考试顺利！",
       ];
       const { PI, sin, cos } = Math;
       const TAU = 2 * PI;
