--- a/Christmas.html
+++ b/Christmas.html
@@ -2171,37 +2171,40 @@ new la({color:void 0!==b?b:16777215}))};k.WrapAroundEnding=2402;k.XHRLoader=func
         "如果你想换的话也可以！",
         "如果想退回重新打开一次礼物",
         "刷新当前页面就可以了！",
-        "因为BGM有点长",
-        "所以就放一下 BGM 的歌词吧",
-        "接下来是音轨并不匹配的歌词",
-        "爱情就像 蓝蓝天上",
-        "一片留白有你陪我想象",
-        "白马突然 不再抽象",
-        "青蛙终于遇见灰姑娘",
-        "就算路还漫长 我却有一种预感",
-        "我相信这灵感",
-        "我把你画成花 未开的一朵花",
-        "再把思念一点一滴画成雨落下",
-        "每当我不在 请记得我的爱",
-        "就在同一天空之下遥远地灌溉",
-        "等待秋去春来 等待下一次花开",
-        "在咫尺的未来",
-        "生活就像 茫茫海上",
-        "一只小船勇敢乘风破浪",
-        "而你就像 不远前方",
-        "默默张开双手的港湾",
-        "就算路还漫长 我却有一种预感",
-        "我相信这灵感",
-        "我把你画成花 未开的一朵花",
-        "再把思念一点一滴画成雨落下",
-        "每当我不在 请记得我的爱",
-        "就在同一天空之下遥远地灌溉",
-        "等待秋去春来 等待下一次花开",
-        "就在咫尺的未来",
-        "爱情就像 遥遥路上",
-        "一束明亮却温柔的月光",
-        "快乐原来 如此简单",
-        "你在身旁就是我的天堂",
+        "作为音乐大师的你",
+        "应该可以发现",
+        "这些圣诞树会随着音乐节奏明灭吧(手动 Doge)",
+        // "因为BGM有点长",
+        // "所以就放一下 BGM 的歌词吧",
+        // "接下来是音轨并不匹配的歌词",
+        // "爱情就像 蓝蓝天上",
+        // "一片留白有你陪我想象",
+        // "白马突然 不再抽象",
+        // "青蛙终于遇见灰姑娘",
+        // "就算路还漫长 我却有一种预感",
+        // "我相信这灵感",
+        // "我把你画成花 未开的一朵花",
+        // "再把思念一点一滴画成雨落下",
+        // "每当我不在 请记得我的爱",
+        // "就在同一天空之下遥远地灌溉",
+        // "等待秋去春来 等待下一次花开",
+        // "在咫尺的未来",
+        // "生活就像 茫茫海上",
+        // "一只小船勇敢乘风破浪",
+        // "而你就像 不远前方",
+        // "默默张开双手的港湾",
+        // "就算路还漫长 我却有一种预感",
+        // "我相信这灵感",
+        // "我把你画成花 未开的一朵花",
+        // "再把思念一点一滴画成雨落下",
+        // "每当我不在 请记得我的爱",
+        // "就在同一天空之下遥远地灌溉",
+        // "等待秋去春来 等待下一次花开",
+        // "就在咫尺的未来",
+        // "爱情就像 遥遥路上",
+        // "一束明亮却温柔的月光",
+        // "快乐原来 如此简单",
+        // "你在身旁就是我的天堂",
         "圣诞快乐！ Again! \n 考试顺利！",
       ];
       const { PI, sin, cos } = Math;
