--- a/happy_for_wsy.html
+++ b/happy_for_wsy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>AE-圣诞树</title>
+		<title>Merry Christmas for Wsy!</title>
 		<style>
 			html,
 			body {
